fix toast z-index

--- a/app/styles/ember-rdfa-editor/_c-toast.scss
+++ b/app/styles/ember-rdfa-editor/_c-toast.scss
@@ -5,6 +5,7 @@
 .say-toast {
   @include au-font-size($au-tiny, 1.3);
   position: fixed;
+  z-index: 3;
   bottom: 0;
   left: 0;
   display: flex;
